--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -96,6 +96,17 @@
                   <text value="Create Account"/>
                 </properties>
               </component>
+              <component id="fc114" class="javax.swing.JButton" binding="nextButton" default-binding="true">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-7751195"/>
+                  <enabled value="false"/>
+                  <text value="Next"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="8c847" binding="createScreen" layout-manager="GridBagLayout">
@@ -698,12 +709,14 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="fc114" class="javax.swing.JButton" binding="nextButton" default-binding="true">
+          <component id="e366f" class="javax.swing.JProgressBar" binding="progressBar">
             <constraints/>
             <properties>
-              <background color="-7751195"/>
-              <enabled value="false"/>
-              <text value="Next"/>
+              <indeterminate value="true"/>
+              <maximum value="400"/>
+              <maximumSize width="9999" height="30"/>
+              <minimumSize width="800" height="30"/>
+              <stringPainted value="true"/>
             </properties>
           </component>
         </children>
