--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -96,17 +96,6 @@
                   <text value="Create Account"/>
                 </properties>
               </component>
-              <component id="fc114" class="javax.swing.JButton" binding="nextButton" default-binding="true">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <background color="-7751195"/>
-                  <enabled value="false"/>
-                  <text value="Next"/>
-                </properties>
-              </component>
             </children>
           </grid>
           <grid id="8c847" binding="createScreen" layout-manager="GridBagLayout">
@@ -366,7 +355,7 @@
               </component>
             </children>
           </grid>
-          <grid id="27a9c" binding="questionsScreen" layout-manager="GridBagLayout">
+          <grid id="27a9c" binding="questionsScreen" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <card name="Card4"/>
             </constraints>
@@ -375,60 +364,90 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="b1b0f" class="javax.swing.JLabel" binding="aLbl">
-                <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
+              <grid id="3f247" layout-manager="GridBagLayout">
+                <constraints border-constraint="Center"/>
                 <properties>
-                  <text value="Label"/>
+                  <background color="-3290691"/>
+                  <preferredSize width="800" height="480"/>
                 </properties>
-              </component>
-              <component id="e107c" class="javax.swing.JLabel" binding="bLbl">
-                <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
-              <component id="cc8d7" class="javax.swing.JLabel" binding="cLbl">
-                <constraints>
-                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
-              <component id="21644" class="javax.swing.JLabel" binding="dLbl">
-                <constraints>
-                  <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
-              <component id="7436b" class="javax.swing.JLabel" binding="questionLbl">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
-              <component id="7a38b" class="javax.swing.JLabel" binding="photoLbl">
-                <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
+                <border type="none"/>
+                <children>
+                  <component id="7a38b" class="javax.swing.JLabel" binding="photoLbl">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag top="10" left="0" bottom="10" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="400" height="300"/>
+                      <text value="Label"/>
+                    </properties>
+                  </component>
+                  <component id="b1b0f" class="javax.swing.JLabel" binding="aLbl">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="100" height="100"/>
+                      <text value="Label"/>
+                    </properties>
+                  </component>
+                  <component id="21644" class="javax.swing.JLabel" binding="dLbl">
+                    <constraints>
+                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="100" height="100"/>
+                      <text value="Label"/>
+                    </properties>
+                  </component>
+                  <component id="e366f" class="javax.swing.JProgressBar" binding="progressBar">
+                    <constraints>
+                      <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="5" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <indeterminate value="true"/>
+                      <maximum value="400"/>
+                      <maximumSize width="9999" height="30"/>
+                      <minimumSize width="800" height="30"/>
+                      <preferredSize width="8" height="15"/>
+                      <stringPainted value="true"/>
+                    </properties>
+                  </component>
+                  <component id="e107c" class="javax.swing.JLabel" binding="bLbl">
+                    <constraints>
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="100" height="100"/>
+                      <text value="Label"/>
+                    </properties>
+                  </component>
+                  <component id="cc8d7" class="javax.swing.JLabel" binding="cLbl">
+                    <constraints>
+                      <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="100" height="100"/>
+                      <text value="Label"/>
+                    </properties>
+                  </component>
+                  <component id="7436b" class="javax.swing.JLabel" binding="questionLbl">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag top="5" left="0" bottom="5" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="400" height="25"/>
+                      <text value="Label"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="41503" binding="resultsScreen" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -526,7 +545,7 @@
                         <properties>
                           <foreground color="-13947600"/>
                           <preferredSize width="50" height="15"/>
-                          <text value="/20"/>
+                          <text value="/25"/>
                         </properties>
                       </component>
                     </children>
@@ -709,14 +728,12 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="e366f" class="javax.swing.JProgressBar" binding="progressBar">
+          <component id="fc114" class="javax.swing.JButton" binding="nextButton" default-binding="true">
             <constraints/>
             <properties>
-              <indeterminate value="true"/>
-              <maximum value="400"/>
-              <maximumSize width="9999" height="30"/>
-              <minimumSize width="800" height="30"/>
-              <stringPainted value="true"/>
+              <background color="-7751195"/>
+              <enabled value="false"/>
+              <text value="Next"/>
             </properties>
           </component>
         </children>
