--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -689,7 +689,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="8dc36" class="javax.swing.JLabel">
+              <component id="8dc36" class="javax.swing.JLabel" binding="timerLbl">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="0.0"/>
