--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,9 +2,11 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1834" height="574"/>
+      <xy x="20" y="20" width="815" height="480"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="800" height="480"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="2bdde" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0">
@@ -461,6 +463,7 @@
                 <constraints border-constraint="North"/>
                 <properties>
                   <background color="-3290691"/>
+                  <preferredSize width="585" height="44"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -673,16 +676,17 @@
             <constraints border-constraint="West"/>
             <properties>
               <background color="-1041"/>
-              <preferredSize width="200" height="45"/>
+              <preferredSize width="215" height="45"/>
             </properties>
             <border type="none"/>
             <children>
               <component id="7792" class="javax.swing.JLabel" binding="profileName">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag top="0" left="5" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
+                  <preferredSize width="165" height="35"/>
                   <text value=""/>
                 </properties>
               </component>
@@ -692,6 +696,7 @@
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
+                  <preferredSize width="35" height="50"/>
                   <text value=""/>
                 </properties>
               </component>
@@ -701,7 +706,7 @@
             <constraints border-constraint="Center"/>
             <properties>
               <background color="-3290691"/>
-              <preferredSize width="300" height="45"/>
+              <preferredSize width="370" height="45"/>
             </properties>
             <border type="none"/>
             <children>
@@ -723,6 +728,7 @@
         <constraints border-constraint="South"/>
         <properties>
           <background color="-3290691"/>
+          <preferredSize width="800" height="44"/>
         </properties>
         <border type="none"/>
         <children>
