--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="815" height="480"/>
+      <xy x="20" y="20" width="815" height="561"/>
     </constraints>
     <properties>
       <preferredSize width="800" height="480"/>
@@ -717,7 +717,7 @@
                 </constraints>
                 <properties>
                   <preferredSize width="101" height="25"/>
-                  <text value="Timer Placeholder"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
