--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -355,6 +355,17 @@
                   <text value="Tick to agree you have read and understand the rules"/>
                 </properties>
               </component>
+              <component id="bf015" class="javax.swing.JButton" binding="startBtn">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-7751195"/>
+                  <enabled value="false"/>
+                  <text value="Start Quiz!"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="27a9c" binding="questionsScreen" layout-manager="BorderLayout" hgap="0" vgap="0">
@@ -759,7 +770,7 @@
       <member id="c4fcd"/>
       <member id="4847"/>
     </group>
-    <group name="buttonGroup2">
+    <group name="AnswersBtnGroupRadio">
       <member id="22bf6"/>
       <member id="73481"/>
       <member id="6434f"/>
