--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -358,7 +358,7 @@
               <component id="bf015" class="javax.swing.JButton" binding="startBtn">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
+                  <gridbag top="20" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-7751195"/>
@@ -770,7 +770,7 @@
       <member id="c4fcd"/>
       <member id="4847"/>
     </group>
-    <group name="AnswersBtnGroupRadio">
+    <group name="AnswersBtnGroupRadio" bound="true">
       <member id="22bf6"/>
       <member id="73481"/>
       <member id="6434f"/>
